# ReserveGrid-OS

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_V1.1.md  RELEASE_NOTES_V2.0.0-rc1.md  SECURITY.md  deny.toml  docker-compose.observe.yml  docker-compose.setup-b.yml  docker-compose.shadow.yml  docker-compose.yml  rustfmt.toml  seccomp.json
.cargo/: audit.toml
.github/workflows/: ci.yml  release-desktop.yml
config/: README.md  demo-open-policy.toml  demo-showcase-policy.toml  demo-strict-policy.toml  policy-strict.toml
deploy/: README.md  env.prod.example  env.setup-b.example  gateway-prod.toml  manager-setup-b.toml  policy-prod.toml
dev/: dashboard.toml  feed-server-observe.toml  gateway.toml  generate-dev-keys.sh  manager-shadow.toml  manager.toml  prometheus.yml
dev/grafana/dashboards/: reservegrid-os.json
dev/grafana/provisioning/dashboards/: default.yml
dev/grafana/provisioning/datasources/: prometheus.yml
docs/: ADR-001-multi-pubkey-license.md  ADR-002-invariant-shield.md  ADR-003-mempool-ground-truth.md  TYPE_BOUNDARIES.md  WAL_CONTRACT.md  deployment-runbook.md  shadow-mode-walkthrough.md  site-redesign-content-additions.md  three-mode-architecture.md  v3-selfish-mining-design-sketch.md
docs/runbooks/: auth-migration-fly-to-tunnel.md  phase2-shadow-soak.md  setup-b-self-host-bitcoind.md  tauri-updater-key-rotation.md
scripts/: benchmark-release.sh  desktop-build.sh  dev-auth.sh  dev-bitcoin-cli.sh  dev-demo-phases.sh  dev-os-test.sh  dev-regtest.sh  dev-stratum.sh  dev-utxo-warmup.sh  fly-deploy.sh  generate-license-key.py  generate-updater-keys.sh  phase2-baseline.sh  phase2-spot-check.sh  superscan.sh  test-auth-flow.sh  test-endpoints.sh  test-inline-mode.sh  test-observe-mode.sh
services/pool-verifier/: Cargo.toml  Dockerfile
services/pool-verifier/src/: bitcoind_rpc.rs  dashboard.rs  handlers.rs  http.rs  ingress.rs  lib.rs  main.rs  mempool_client.rs  mempool_view.rs  metrics.rs  policy.rs  state.rs  types.rs  verdicts.rs
services/pool-verifier/tests/: phase2_eval.rs  phase2_tcp.rs
services/pool-verifier/tests/fixtures/: regtest_segwit_block.hex
services/reservegrid-common/: Cargo.toml
services/reservegrid-common/src/: config.rs  config_io.rs  error.rs  lib.rs  metrics.rs  mode.rs  rate_limit.rs  reason.rs  redacted.rs
services/reservegrid-gateway/: Cargo.toml
services/reservegrid-gateway/src/: health.rs  lib.rs  logging.rs  panic_guard.rs  rejection.rs  shutdown.rs
services/reservegrid-gateway/src/middleware/: auth.rs  headers.rs  input.rs  mod.rs  rate_limit.rs  request_id.rs  tls.rs
services/reservegrid-gateway/src/protocol/: mod.rs  nonce.rs  timing.rs
services/rg-auth/: Cargo.toml  Dockerfile  entrypoint.sh  fly.toml  litestream.yml
services/rg-auth/src/: db.rs  email.rs  handlers.rs  main.rs  password.rs  rate_limit.rs  session.rs
services/rg-consensus/: Cargo.toml
services/rg-consensus/src/: lib.rs
services/rg-dashboard/: Cargo.toml  Dockerfile
services/rg-dashboard/config/: default.toml
services/rg-dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
services/rg-dashboard/frontend/src/: App.tsx  index.css  tauri-bridge.ts
services/rg-dashboard/frontend/src/components/: Toggle.tsx
services/rg-dashboard/frontend/src/data/: mock.ts  types.ts
services/rg-dashboard/frontend/src/hooks/: useApi.ts
services/rg-dashboard/src/: config.rs  main.rs  proxy.rs
services/rg-demo-feed/: Cargo.toml  Dockerfile
services/rg-demo-feed/src/: main.rs  scenarios.rs
services/rg-desktop/: Cargo.toml  build.rs  tauri.conf.json
services/rg-desktop/icons/: icon.icns
services/rg-desktop/src/: config.rs  license.rs  main.rs  proxy.rs  tray.rs  update.rs
services/rg-feed-adapter/: Cargo.toml  Dockerfile
services/rg-feed-adapter/config/: observe.toml  shadow.toml
services/rg-feed-adapter/src/: config.rs  feed.rs  main.rs  rpc.rs
services/rg-feed-server/: Cargo.toml  Dockerfile  fly.toml
services/rg-feed-server/config/: default.toml
services/rg-feed-server/src/: auth.rs  config.rs  feed.rs  main.rs
services/rg-load-test/: Cargo.toml
services/rg-load-test/src/: main.rs
services/rg-protocol/: Cargo.toml
services/rg-protocol/src/: gateway.rs  lib.rs
services/sv2-bridge/: Cargo.toml
services/sv2-bridge/src/: main.rs
services/sv2-gateway/: Cargo.toml  Dockerfile
services/sv2-gateway/src/: channels.rs  config.rs  connection.rs  handler.rs  health.rs  jobs.rs  lib.rs  main.rs  shares.rs  sv2_codec.rs  transport.rs  upstream.rs  verifier_stream.rs  wal.rs
services/template-manager/: Cargo.toml  Dockerfile  manager.toml
services/template-manager/src/: config.rs  main.rs
services/test-miner/: Cargo.toml  Dockerfile
services/test-miner/src/: error.rs  main.rs  session.rs  transport.rs
supply-chain/: config.toml
