[package]
name = "reservegrid-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared types, error codes, and configuration primitives for ReserveGrid OS"
publish = false

[dependencies]
rg-protocol = { path = "../rg-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v7"] }
prometheus-client = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
serde_json = "1"
