[package]
name = "rg-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "rg-auth"
path = "src/main.rs"

[dependencies]
reservegrid-common = { path = "../reservegrid-common" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors", "limit"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
