[package]
name = "rg-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "ReserveGrid OS native desktop client — Tauri app replacing rg-dashboard"
publish = false
default-run = "ReserveGrid"

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dirs = "6"
tauri-plugin-updater = "2"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
subtle = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints]
workspace = true

# Binary name controls the macOS menu bar title during dev mode.
# Tauri build uses productName from tauri.conf.json for the final bundle.
[[bin]]
name = "ReserveGrid"
path = "src/main.rs"
