[package]
name = "rg-feed-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Authenticated mainnet Bitcoin template feed for observe mode"
publish = false

[[bin]]
name = "rg-feed-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
http = "1"

[lints]
workspace = true
