[package]
name = "sv2-bridge"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

rg_protocol = { package = "rg-protocol", path = "../rg-protocol" }

[lints]
workspace = true
