[package]
name = "template-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
rg-protocol = { path = "../rg-protocol" }
reservegrid-common = { path = "../reservegrid-common" }
bitcoincore-rpc = "0.18"
toml = "0.8"
axum = "0.7"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
tower-http = { version = "0.6", features = ["limit"] }
prometheus-client = { workspace = true }

[lints]
workspace = true
